Calendar events no longer overlap footer

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -2,6 +2,7 @@
 	position:fixed;
 	width:100%;
 	bottom:0px;
+	z-index:9999;
 }
 
 #site_footer {
